--- a/src-ui/src/app/components/document-list/document-card-small/document-card-small.component.scss
+++ b/src-ui/src/app/components/document-list/document-card-small/document-card-small.component.scss
@@ -45,7 +45,7 @@
 }
 
 .doc-img-background-selected {
-  background-color: var(--ngx-primary-faded);
+  background-color: var(--pngx-primary-faded);
 }
 
 .card-info {
