--- a/src-ui/src/app/components/document-list/document-list.component.scss
+++ b/src-ui/src/app/components/document-list/document-list.component.scss
@@ -9,7 +9,7 @@ tr {
 }
 
 .table-row-selected {
-  background-color: var(--ngx-primary-faded);
+  background-color: var(--pngx-primary-faded);
 }
 
 $paperless-card-breakpoints: (
